# RAGNAROK

./: LICENSE  QuickStart.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run_synthetic.py  synthetic_test_cases.py
ragnarok/: __init__.py  __main__.py  _libs.py  config.py  evaluator.py  presets.py  reporting.py  utils.py
ragnarok/business/: __init__.py  business_metrics.py  fault_classifier.py
ragnarok/integrations/: __init__.py  llm_judge.py  ragas_bridge.py
ragnarok/metrics/: __init__.py  chunking.py  coverage.py  data_availability.py  density.py  embedding_quality.py  faithfulness.py  pipeline.py  reranking_quality.py  retrieval.py
tests/: test_business_metrics.py  test_chunking.py  test_coverage.py  test_data_availability.py  test_density.py  test_embedding_quality.py  test_evaluator.py  test_faithfulness.py  test_fault_classifier.py  test_pipeline.py  test_presets.py  test_reporting.py  test_reranking_quality.py  test_retrieval.py
