[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragnarok"
version = "0.1.0"
description = "LLM-Independent RAG Evaluation Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RAGNAROK Team"}
]
keywords = ["rag", "evaluation", "nlp", "llm", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ragas = ["ragas>=0.1.0", "datasets>=2.14.0"]
dev = ["pytest>=7.0.0"]
all = [
    "openai>=1.0.0",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ragnarok/ragnarok"
Repository = "https://github.com/ragnarok/ragnarok"

[tool.setuptools.packages.find]
where = ["."]
include = ["ragnarok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
